--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!xxxxx</p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vel
+  dolorem quas earum molestiae eos ducimus suscipit consectetur? Unde recusandae
+  possimus, aliquid voluptates cupiditate laboriosam corporis velit nostrum in
+  reiciendis!
+</p>
