--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,48 @@
-<p>progress works!</p>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Barra de progreso</h5>
+    <h6>{{ porcentaje1 }}</h6>
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        role="progressbar"
+        [attr.ariaValuenow]="porcentaje1"
+        aria-valuemin="0"
+        aria-valuemax="100"
+        [style.width]="porcentaje1 + '%'"
+      ></div>
+    </div>
+    <br />
+    <h6>{{ porcentaje2 }}</h6>
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-success progress-bar-striped progress-bar-animated"
+        role="progressbar"
+        [attr.ariaValuenow]="porcentaje2"
+        aria-valuemin="0"
+        aria-valuemax="100"
+        [style.width]="porcentaje2 + '%'"
+      ></div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <!--Para el 1-->
+  <div class="col-md-4">
+    <app-incrementador
+      [title]="titulo1"
+      [progreso]="porcentaje1"
+      (cambio)="porcentaje1 = $event"
+    ></app-incrementador>
+  </div>
+
+  <!--Para el 2-->
+  <div class="col-md-4">
+    <app-incrementador
+      [title]="titulo2"
+      [progreso]="porcentaje2"
+      (cambio)="porcentaje2 = $event"
+    ></app-incrementador>
+  </div>
+</div>
